--- a/src/main/resources/templates/projetos.html
+++ b/src/main/resources/templates/projetos.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Rodrigo Barbosa De Sousa - Projetos</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/favicon_io/favicon.ico}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Rodrigo Barbosa De Sousa - Projetos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
         referrerpolicy="no-referrer">
