--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -99,7 +99,7 @@
 
                     <!-- Redes Sociais -->
                     <div class="mt-6 has-text-centered">
-                        <h5 class="title is-5 has-text-gold">Também me encontre aqui:</h5>
+                        <h5 class="title is-5 has-text-gold">Acesse minhas redes sociais:</h5>
                         <div class="mt-3">
                             <a href="https://github.com/RodrigoLee56" target="_blank" class="mx-3 has-text-gold">
                                 <i class="fab fa-github fa-2x"></i></a>
